--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.0.0"
+    "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0npm",
+    "jquery": "^3.5.1",
+    "mitt": "^2.1.0",
+    "popper.js": "^1.16.1",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-rc.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -20,6 +26,8 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^4.2.0",
     "typescript": "~3.9.3"
   }
 }
