--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mitt": "^2.1.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-rc.6"
+    "vue-router": "^4.0.0-rc.6",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
