--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0npm",
     "jquery": "^3.5.1",
+    "markdown-it": "^12.0.4",
     "mitt": "^2.1.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
@@ -19,6 +20,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
